Fix Chrome overflow issue with columns
Fixes issue in Chrome where consecutive stat blocks in a `column`
layout were not flowing correctly to next columns and causing overflow.

Based on solution described here:

http://stackoverflow.com/a/17415553/48611

--- a/basic-style.css
+++ b/basic-style.css
@@ -1,13 +1,16 @@
+:host {
+  display: block;
+  overflow: hidden;
+  break-inside: avoid-column;
+  -webkit-column-break-inside: avoid;
+}
+
 .bar {
   height: 5px;
   border: 1px solid #000;
   position: relative;
   z-index: 1;
   background: var(--stat-block-bar-background);
-}
-
-:host {
-  display: inline-block;
 }
 
 ::content {
